updated at: 2023-04-25 22:08, バトペンラック - ぬこみや⑨V.M.C - BOOTH

--- a/VRChat/91/1289191.html
+++ b/VRChat/91/1289191.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FwOCRsfsEIie/PGKnS63ZlZcdrMExWISbi4P1TtLjx0="></script>
+    "LLRGNvWq0uj+x4pLq+feI6WeXvuVBqBRfKsV0T6JLUA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バトペンラック","description":"[バトペンラック]\nポリゴン数△136、マテリアル数2、テクスチャ枚数2\n最大13本までバトペンを立てかけておけるバトペンラック。\n上部にはポスターも掲示可能。\n\n※本製品にはバトペン及びバトペン・ポスターのテクスチャは付属しておりません。\nプレイボーン様が公開されている一覧よりDLしてご利用下さい。\nhttps://twitter.com/VPlaybone/status/1109706182715858946","url":"https://booth.pm/ja/items/1289191","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e6170a80-5060-4a22-8c22-c10792111eba/i/1289191/94aa2452-12bf-4503-ad58-033748a6f6d1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FwOCRsfsEIie/PGKnS63ZlZcdrMExWISbi4P1TtLjx0="></script>
+    nonce="LLRGNvWq0uj+x4pLq+feI6WeXvuVBqBRfKsV0T6JLUA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1289191/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1289191/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
