--- a/VRChat/80/1289080.html
+++ b/VRChat/80/1289080.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sXn/NNnisIkJBRIxprF7AMgswGcRINver7+bFNSE28I="></script>
+    "J/vFCkzBh1xyu8Vmz0XD91HsILAqoPglLMDVFhZYd7c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"はまきv1","description":"タバコより使用用途のないはまきです。\n\n\n内容物\n・はまきv1　FBX＋テクスチャ（点火前＆点火後）\n","url":"https://booth.pm/ja/items/1289080","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4a3cd6b-ee52-4b50-ba9a-4a4bdc690a8e/i/1289080/92f48342-ef57-4a92-9872-d80c464f5f69_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sXn/NNnisIkJBRIxprF7AMgswGcRINver7+bFNSE28I="></script>
+    nonce="J/vFCkzBh1xyu8Vmz0XD91HsILAqoPglLMDVFhZYd7c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1289080/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               192
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1289080/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               192
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
