--- a/VRChat/90/1288890.html
+++ b/VRChat/90/1288890.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4NJjF2Z7pACvN8PkM1SJNPcwp+dgi+IlwHLgb5CApgU="></script>
+    "D4tBhPeZtjKTUjmYf12qRj06opurSh2v9ovWsefS0X0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お休みさんのドーナツ屋さんキッチンカー　V1.1","description":"お休みさんドーナツカフェのキッチンカーです。\nバーチャルマーケット2にて展示していたものとほぼ同じ状態ですが、一部テクスチャの変更を行っています。\nVRChatでのワールドの飾りとして使うことを想定しています。\nUnity及びVRChatでの使用を想定していますが、fbxファイルおよびテクスチャファイルを同梱していますので、他の3Dモデルやゲームソフト等に組み込んで使用することも可能です。ただしVRChat以外で使用する場合、テクスチャの改変を必須とします。(ライセンス参照)\n\nVer1.1にて、Unityで改変しやすいようにオブジェクトを分割したバージョンを同梱しました。\nキッチンカーの車体部分など一部を切り出して使用することや、後ろのドアを開けるなどオブジェクトの位置を変更することが可能です。\n\nなお、ドーナツの手提げボックス、紙袋、ドーナツ単体のfbxファイルやドーナツのメッシュ構造は別で販売している「お休みさんのドーナツセット」に含まれる内容の一部と同じですが、このパッケージには「お休みさんのドーナツセット」全体の内容は含んでいません。\n\n規約を追記しました！\nパッケージ内の変更が間に合っていませんが、本ページの記載が優先とさせてください。\n◆バーチャルマーケット、落選マーケットへのブースとしての使用\n購入者による改変を前提として、運営者へのブース提出及び運営者による配置・調整は問題ないものとします。\n上記以外のイベントでの運営者への再配布については個別に判断しますのでお問い合わせください。\n","url":"https://booth.pm/ja/items/1288890","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/64255878-1532-4d6c-abdb-a9cf35ee4a39/i/1288890/e91dba7c-a564-4cf9-ae3e-100d98171500_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4NJjF2Z7pACvN8PkM1SJNPcwp+dgi+IlwHLgb5CApgU="></script>
+    nonce="D4tBhPeZtjKTUjmYf12qRj06opurSh2v9ovWsefS0X0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1288890/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               340
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1288890/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               340
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
