updated at: 2023-04-25 22:08, VRChat想定　ピアノリング - 焼き金魚定食 - BOOTH

--- a/VRChat/18/1288718.html
+++ b/VRChat/18/1288718.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XOA3gsoVEGu2RO1NxQbhs/Ar/3B/7z/5JvY8mfb7cYU="></script>
+    "Spv/HSDBEQugjWFa1J8+d+wxqIOSpO2mNIsJOtjlAcE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定　ピアノリング","description":"VRChatでの使用を想定した3Dアクセサリーです。\nFBX形式、ポリ数は△648です。\n\n腕輪程度のサイズになっておりますので、\n指輪として使用する場合はUnity上でスケールをご調整ください。\n\n","url":"https://booth.pm/ja/items/1288718","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/585e52e7-c633-449a-b3d1-91a68aabbfb2/i/1288718/352b4f68-38c0-4b01-88b0-de80ad1b8e23_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XOA3gsoVEGu2RO1NxQbhs/Ar/3B/7z/5JvY8mfb7cYU="></script>
+    nonce="Spv/HSDBEQugjWFa1J8+d+wxqIOSpO2mNIsJOtjlAcE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1288718/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1288718/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
