updated at: 2023-04-25 22:08, VRChat向け_ペスト医師マスク - karasoni - BOOTH

--- a/VRChat/42/1288242.html
+++ b/VRChat/42/1288242.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "25QnuhpbeCM0XgsW4dRiOg6CrZ6W9BTqtOqEeNzFgyc="></script>
+    "MaffRn8Zz0WEY/2riieUpGNi/3bispm0gccFHoxBSnw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け_ペスト医師マスク","description":"ＶＲＣ向けと書いてますが、基本ご自由にお使いください。\n\n※再配布、自作発言はおやめください。\n\n△は８９４ポリゴンです。\n\n顎の部分は取り外しが可能です。\n\nテクスチャーは\n\nBase_Color\nHeight\nNormal_OpenGL\n\nを使っています。お手数ですがお好みのシェーダーでテクスチャーを割り当てて使ってください。\n\nノーマルマップを適用する際はテクスチャーを割り当てた後、「Fix Now」を押せば画像１枚目の用になります。（Fix Nowは画像３枚目を参照）","url":"https://booth.pm/ja/items/1288242","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1288242/24d53399-92b9-4fbb-a12f-c538bdcc01b5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="25QnuhpbeCM0XgsW4dRiOg6CrZ6W9BTqtOqEeNzFgyc="></script>
+    nonce="MaffRn8Zz0WEY/2riieUpGNi/3bispm0gccFHoxBSnw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1288242/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               408
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1288242/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               408
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
