--- a/VRChat/45/1288045.html
+++ b/VRChat/45/1288045.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ywzNvrC5C1YxmWGiF1IVuBb+z4euTDdz072L5xX5cGw="></script>
+    "1KJn3cluC2479l6nOvAXBsyAlm5KiM/GOg6lOa0JFmc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【髪飾り】脳波感応式通信デバイス\"Resonant Flower Mk.Ⅲ\"","description":"【説明】\nVRChatでの使用を想定したオリジナル3Dモデル\nその他ゲームや動画等でも使用可能\n\n制作者:Tokunaga_ac\n\n\n\n続けていきたいRFシリーズ。\nお花の画像検索して、気に入ったものをRF化するのにはまっています。\n\n今回は黒と白、選べる二色をご用意しました。\n\n左側に使用したい場合は、スケールのXの値を「-1」にしてください\n\n\n\nunity packageはマテリアル等セットアップ済みprefab同梱\n\n\n【内容物】\n\n■Unity package\nRF-Mk3.unitypackage\n\n■フォルダ\nRF-Mk3_contents\n　unitypackageに含まれているFBX、テクスチャデータ\n\n\n◆◇◆【利用規約】◆◇◆\n\nhttps://docs.google.com/document/d/1L3RhJVXeK9gEyJG3I2trR6v0SWS8bVYIy4ju1dvHKwY/edit?usp=sharing\n\n\n\n\n\n【連絡先】\n\nTwitter:Tokunaga_ac\nDiscord:Tokunaga_ac#3200\nEmail  :atelieralca01@gmail.com","url":"https://booth.pm/ja/items/1288045","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/6ac10b7b-256b-4e3b-b6d6-61437066f561/i/1288045/7251d83f-fd2b-4146-8907-bb51fdce873b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ywzNvrC5C1YxmWGiF1IVuBb+z4euTDdz072L5xX5cGw="></script>
+    nonce="1KJn3cluC2479l6nOvAXBsyAlm5KiM/GOg6lOa0JFmc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1288045/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               221
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1288045/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               221
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
