--- a/VRChat/18/1287718.html
+++ b/VRChat/18/1287718.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ea5NwfjoroeRoWy7JptCR5o8HbL8zJNKXgyZD+L+o6k="></script>
+    "02K8cM858TrsVKC5QJsi+wHLG+kKHm1iyXDvkXWxBZE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Antique Padlock（△1210）","description":"Antique Padlockの3Dモデル（Unity用）、Key付属。","url":"https://booth.pm/ja/items/1287718","offers":{"priceCurrency":"JPY","@type":"Offer","price":"180"},"image":"https://booth.pximg.net/c/620x620/35eda33f-5f5b-4dec-bda5-d25adcc391d1/i/1287718/e1ac28ea-554a-4a5f-9bd9-85f08dbd1946_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ea5NwfjoroeRoWy7JptCR5o8HbL8zJNKXgyZD+L+o6k="></script>
+    nonce="02K8cM858TrsVKC5QJsi+wHLG+kKHm1iyXDvkXWxBZE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1287718/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1287718/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
