--- a/VRChat/72/1287472.html
+++ b/VRChat/72/1287472.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6xWxXpnQ1h/lbJukGSnLvoorLq1mk/cJ/RXue8uG/Vs="></script>
+    "QW7X169RN9Sv/DjipZa6gZTk0PpcIj/L+34ku42coSc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け_何かに使えそうなドクロ","description":"ＶＲＣ向けと書いてますが、基本ご自由にお使いください。\n\n※再配布、自作発言はおやめください。\n\n△が１３５４４ポリゴンと少し多めです。改変なども自由なのでブレンダーなどでポリゴン数を減らすといいかもしれません。\n\n※画像はメタリックに見せるためにシェーダーを使っています。お好みのシェーダーを使いましょう。\n\n「ago」というボーンを回転させることで口を開けることができます。\n\n鎖の部分にもボーンを入れていますので、ダイナミックボーンを設定することで動かすこともできます。（ダイナミックボーンは設定されてないのでお手数ですがお好みの設定でお願いします）\n","url":"https://booth.pm/ja/items/1287472","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1287472/39a8908b-5a32-4e25-ac8a-6345c94e6b2a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6xWxXpnQ1h/lbJukGSnLvoorLq1mk/cJ/RXue8uG/Vs="></script>
+    nonce="QW7X169RN9Sv/DjipZa6gZTk0PpcIj/L+34ku42coSc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1287472/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1287472/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
