updated at: 2023-04-25 22:11, サボテン - #Cheap_Shop - BOOTH

--- a/VRChat/56/1286456.html
+++ b/VRChat/56/1286456.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Ts0zdSGvK5WbeTwGRU9IaFIa0GpiiVPI4rPi9SInEzE="></script>
+    "/zdKxprdo9bkITlW8PPYfyyhJbdmxmgoDEDWo8bZT30="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サボテン","description":"鉢植えのサボテンです。（△7436）\n植木鉢は https://rumored.booth.pm/items/1276394 の物より、やや低くなっています。\n\n【内容物】\n・cactus..unitypackage\n・cactus.fbx\n・cactus.png\n・pot.png","url":"https://booth.pm/ja/items/1286456","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/740fc37b-7996-42b7-93bb-9fb07e71227a/i/1286456/4b83a616-eb88-4204-8721-75d547c4bba4_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ts0zdSGvK5WbeTwGRU9IaFIa0GpiiVPI4rPi9SInEzE="></script>
+    nonce="/zdKxprdo9bkITlW8PPYfyyhJbdmxmgoDEDWo8bZT30="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,10 +159,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1286456/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              248
+                              249
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1286456/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              248
+                              249
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
