updated at: 2023-04-25 22:12, VRCごいたシステム - a3s - BOOTH

--- a/VRChat/01/1285501.html
+++ b/VRChat/01/1285501.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Ur0uen1GA9iXQV3Q1f7e+0v1VqAO+xuRGUz23K0oC74="></script>
+    "G1tAlHpcsVv6WgGYFrrErKDnNdwnn76hmS3tjkmznQM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCごいたシステム","description":"VRChatにアップしたごいたシステムです。\nhttps://vrchat.com/home/launch?worldId=wrld_e5b3507c-6d87-4aab-8853-03829da1ec2f\n本パッケージを導入することで、VRChatの自ワールドにごいたを設置できます。\nゲームワールド増えろ！\n\n●使用方法\nVRCSDK2導入済みプロジェクトへインポートしてください。\nこのとき、添付の「レイヤー設定1.png」「レイヤー設定2.png」の通り下記より設定ください。\n①Inspector \u003e Layer \u003e Add Layer...\n②Edit \u003e Project Settings \u003e Physics\n下記にサンプルシーンがありますのでご利用ください。\n　Assets\\Goita\\GoitaPublic.unity\nVRCのコントロールパネルの指示に従い、各種設定をすることでワールドとしてアップロードできます。\n盤を自分のワールドへ追加するなどしてお使いください。\n\n●ライセンス\nこれを利用したワールドの公開等OKです。よしなに。\n利用によって生じたいかなる損害についても責任を負いません。\n\n●以下の機能が含まれます。\n・得点計算\n・シャッフル機構\n・3Dごいた駒、盤\n\n●以下の機能は含まれません\n・BGM\n・鼓門\n・背景画像\n・VRCSDK、他アセット類\n・標準ごいた盤以外","url":"https://booth.pm/ja/items/1285501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1285501/58a8db15-f589-4e2b-81d4-8192bb2794ed_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ur0uen1GA9iXQV3Q1f7e+0v1VqAO+xuRGUz23K0oC74="></script>
+    nonce="G1tAlHpcsVv6WgGYFrrErKDnNdwnn76hmS3tjkmznQM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1285501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1285501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
