updated at: 2023-04-25 22:16, VRC向けアバター「ご先祖」 - MoNOYA et DiGIYA - BOOTH

--- a/VRChat/79/1282379.html
+++ b/VRChat/79/1282379.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kp4l6Uu1M6o1tmEH6vK+Pqht9/ZBcrFKvgo1Zi7Vp0E="></script>
+    "i2cfgUoaGonm3s40esycdddtco4noOFurvd5Ff3uTrg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けアバター「ご先祖」","description":"私のご先祖様です。\n\nVRChatを想定して設定済みの .unitypackage 形式での配布となります。ハイポリでも軽量・低負荷なオブジェクトです。\n\n無印：△70,000\n軽量版：△20,000 ポリ版、テクスチャは4K\nもっと軽量版：△5,000 ぞ！テクスチャは2K（Arktoon同梱）\nGosenzoスペシャル（応援版）：全バージョン+Arktoon同梱版\n\n\n■ライセンス\n禁止事項\n- 素材そのものの再配布\n- 素材のイメージを著しく損なう利用\n- 公序良俗に反する目的での利用\n- その他、作者が不適切と判断した場合\n\n推奨事項\n- 素材を利用した作品の公開時に可能な範囲で利用素材のクレジットを入れていただけると（しましまPが）嬉しいです。\n  例）「ご先祖」by しましまP、\"Gosenzo\" by shimakid\n\n2019/07/04 更新：利用作品の配布・販売を許可しました。これにより、\n- VRChat などのゲームの個人用アバターとして利用に加えて、作成したアバター・素材を組み込んだワールドなどの配布・販売が可能になります。\n- ご先祖素材を使用したアバターのVRCペデスタル公開もOKですので、どんどん公開してください。\n\n※全部入りも含めて全て無料で一時的に再公開中","url":"https://booth.pm/ja/items/1282379","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/1ca2def6-097f-4cee-84ca-e5b58bd9f29c/i/1282379/7da5fbcb-5ef9-488e-8c56-92bfc6195420_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kp4l6Uu1M6o1tmEH6vK+Pqht9/ZBcrFKvgo1Zi7Vp0E="></script>
+    nonce="i2cfgUoaGonm3s40esycdddtco4noOFurvd5Ff3uTrg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1282379/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               173
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1282379/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               173
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
