updated at: 2023-04-25 22:17, えみゅーんバーチャルアクリルキーホルダー＆バーチャルバッチ（無料版と内容は変わりません） - えみゅーんのおみせ - BOOTH

--- a/VRChat/03/1281503.html
+++ b/VRChat/03/1281503.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5Yc9jc6bE2nqRuc+UapoZ4YIA+lbGL8yiMtelDYp85o="></script>
+    "1XRAraltuA0gUkuoHcGKRAFHNGyPvndj1eYWc9IQLMk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"えみゅーんバーチャルアクリルキーホルダー＆バーチャルバッチ（無料版と内容は変わりません）","description":"こんにちはみゅーん！\nバーチャルモーションキャプチャー公認応援キャラクターえみゅーんのバーチャル世界で使えるアクリルキーホルダーとバッチみゅーん！（現実世界で使える商品ではありませんので、ご注意くださいみゅーん！）\n\nVRChat用アクリルキーホルダー、Dynamic Bone設定済み\nVRM用アクリルキーホルダーのspring boneのおすすめ設定の画像付き\n（シェーダーもすぐに使えるように設定済みみゅーん！）\n\n★無料配布版と内容は変わりません★","url":"https://booth.pm/ja/items/1281503","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/0cec8ae7-1e96-44dd-b436-b62058421e6a/i/1281503/5c53777a-0f7e-428a-b344-47f38b2ad3f0_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5Yc9jc6bE2nqRuc+UapoZ4YIA+lbGL8yiMtelDYp85o="></script>
+    nonce="1XRAraltuA0gUkuoHcGKRAFHNGyPvndj1eYWc9IQLMk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1281503/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1281503/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
