updated at: 2023-04-25 22:17, えみゅーんバーチャルアクリルキーホルダー＆バーチャルバッチ - えみゅーんのおみせ - BOOTH

--- a/VRChat/57/1280957.html
+++ b/VRChat/57/1280957.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gMzOhTUlSOoeEJ0NL59gbqUKqSdROUT/eWLEXczFLJY="></script>
+    "3KrzuBO42nGM0BIzK3zDxUQzCS+6jnqlYG+u74f75EQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"えみゅーんバーチャルアクリルキーホルダー＆バーチャルバッチ","description":"こんにちはみゅーん！\nバーチャルモーションキャプチャー公認応援キャラクターえみゅーんのバーチャル世界で使えるアクリルキーホルダーとバッチみゅーん！（現実世界で使える商品ではありませんので、ご注意くださいみゅーん！）\n\nVRChat用アクリルキーホルダー、Dynamic Bone設定済み\nVRM用アクリルキーホルダーのspring boneのおすすめ設定の画像付き\n（シェーダーもすぐに使えるように設定済みみゅーん！）","url":"https://booth.pm/ja/items/1280957","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/0cec8ae7-1e96-44dd-b436-b62058421e6a/i/1280957/22ba9f19-d31b-4418-a03d-5dc232d3b8ef_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gMzOhTUlSOoeEJ0NL59gbqUKqSdROUT/eWLEXczFLJY="></script>
+    nonce="3KrzuBO42nGM0BIzK3zDxUQzCS+6jnqlYG+u74f75EQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1280957/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1280957/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
