updated at: 2023-04-25 22:18, 【 VRChat 3D model】 Gem earrings 002 - Camelzoa - BOOTH

--- a/VRChat/73/1281073.html
+++ b/VRChat/73/1281073.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "d7LM9a8qVDG2QsepYY1RCdwrQpaGiFfot9AzqzgyXm0="></script>
+    "HhkDyuqwIFM/knnTQ42BlL6YhXEhQMcRJcrkkyua/iM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【 VRChat 3D model】 Gem earrings 002","description":"1. Two type.\n2. bone ready \n('Dynamic bone' apply to Armature -\u003e Bone -\u003e Bone.002)\n\nused 'Mochie's uver shader' and 'Gem shader'\nIf you want, u can change into something else.\n(5 colors in the material folder.)","url":"https://booth.pm/ja/items/1281073","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/68fc679e-965c-4fe2-8f3f-beb730bc376b/i/1281073/e2abd008-f4c2-4228-97fa-a1f78604e8f6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="d7LM9a8qVDG2QsepYY1RCdwrQpaGiFfot9AzqzgyXm0="></script>
+    nonce="HhkDyuqwIFM/knnTQ42BlL6YhXEhQMcRJcrkkyua/iM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1281073/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1281073/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
